# hbd-vision.cpp

./: .gitmodules  CMakeLists.txt  HANDOFF-F16-everywhere.md  HANDOFF-matting-server.md
bench/: PROFILE.md  RESULTS.md  ROOFLINE.md  VRAM.md  matting_bench.sh  measure_vram.sh  prof_cpu.csv  prof_gpu.csv
include/visp/: ml.h
src/server/: CMakeLists.txt  birefnet_server.cpp
src/visp/: ml.cpp  nn.cpp
src/visp/arch/: birefnet.cpp  swin.cpp
